# conan_cmake_minimal_project

./: CMakeLists.txt  conanfile.py  zdravomir.cpp
